--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,11 +101,11 @@
     </dependency>
 
     <!-- Hot reload -->
-    <dependency>
+    <!-- <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <build>
